created component ChampionsTable

--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,6 +1,9 @@
 /* Fonts */
 $base-fonts: 'Libre Franklin', sans-serif;
-$font-normal: 400;
-$font-bold: 600;
-$font-black: 900;
+
+$gray: rgb(74,68,86);
+$red: rgb(255,79,91);
+$black: rgb(17,10,2);
+$blue: rgb(18,112,167);
+$purple: rgb(64,24,128);
 
