--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -7,6 +7,7 @@
 	color: #fff;
 	padding: 5vw;
 	height: 100vh;
+	overflow-x: auto;
 }
 
 .table{
@@ -43,6 +44,12 @@ td.adjust{
 .remove-link-styles{
 	text-decoration: none;
 	color: inherit;
+}
+
+.error{
+	background: $red;
+	font-size: 16px;
+	text-align: center;
 }
 
 .champion-row{
