--- a/src/styles/_utilities.scss
+++ b/src/styles/_utilities.scss
@@ -1,13 +1,4 @@
-.text-ellipsis {
-  overflow      : hidden;
-  white-space   : nowrap;
-  text-overflow : ellipsis;
-}
-
-.text-center {
-  text-align : center;
-}
-
-.text-right {
-  text-align : right;
+.remove-link-styles{
+	text-decoration: none;
+	color: inherit;
 }
