--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,5 +1,6 @@
 @import "variables";
 @import "normalize";
+@import "animations";
 @import "utilities";
 
 .container{
@@ -10,22 +11,28 @@
 	overflow-x: auto;
 }
 
+/*Table Styles*/
 .table{
 	width: 100%;
-}
-.table thead tr{
-	background: $black;
-}
-.table tr{
-	background: $blue;
-}
-.table td{
-	padding: 10px;
-}
-td.adjust{
-	padding: 6px 0 8px 15px
+	thead tr{
+		background: $black;
+	}
+	tr{
+		background: $blue;
+		.champion-row{
+			background: $purple;
+		}
+	}
+	td{
+		padding: 10px;
+		.adjust{
+			padding: 6px 0 8px 15px
+		}
+	}
 }
 
+
+/*Button*/
 .button{
 	background: $red;
 	border: 3px solid transparent;
@@ -33,7 +40,6 @@ td.adjust{
 	padding: 12px 20px;
 	display: inline-block;
 }
-
 .button:hover,
 .button:active,
 .button:focus{
@@ -41,42 +47,25 @@ td.adjust{
 	border-color: $red;
 }
 
-.remove-link-styles{
-	text-decoration: none;
-	color: inherit;
-}
 
-.error{
-	background: $red;
-	font-size: 16px;
-	text-align: center;
-}
-
-tr.champion-row{
-	background: $purple;
-}
-
+/*Link*/
 .link{
   color: $red;
   padding: 0px 0 10px 30px;
   display: block;
 }
 
+/*Error and loading*/
+.error{
+	background: $red;
+	font-size: 16px;
+	text-align: center;
+}
 .loading{
   left: calc(50% - 48px);
   position: relative;
   top: 115px;
   animation: spin 4s infinite linear;
-}
-@keyframes spin {
-  0% {
-    -webkit-transform: rotate(0deg);
-            transform: rotate(0deg);
-  }
-  100% {
-    -webkit-transform: rotate(359deg);
-            transform: rotate(359deg);
-  }
 }
 
 @media screen and (min-width: 1200px){
